fix gitignore to apply recursively

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # compiled output
-/dist
-/node_modules
-/build
+dist/
+node_modules/
+build/
 
 # Logs
 logs
@@ -16,11 +16,11 @@ lerna-debug.log*
 .DS_Store
 
 # Tests
-/coverage
-/.nyc_output
+coverage/
+.nyc_output/
 
 # IDEs and editors
-/.idea
+.idea/
 .project
 .classpath
 .c9/
@@ -29,7 +29,8 @@ lerna-debug.log*
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
+# Убрали слеш, чтобы игнорировать .vscode в подпапках (например, в монорепозиториях)
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -43,8 +44,8 @@ lerna-debug.log*
 .env.local
 
 # temp directory
-.temp
-.tmp
+.temp/
+.tmp/
 
 # Runtime data
 pids
