using Groq API instead of local AI model. updated docs and variables in README, .env.example and .env.jobsearch

--- a/ai-job-searcher-backend/.env.jobsearch
+++ b/ai-job-searcher-backend/.env.jobsearch
@@ -2,20 +2,20 @@
 CANDIDATE_RESUME="Fullstack Developer, NestJS, TypeScript, React, Trainee/Junior/Strong Junior"
 JOB_FILTERS="Sava only remote vacancies"
 SEARCH_KEYWORD="Node.js Developer"
+SEND_NOTIFY_EMAIL=false
 
 # Scoring and automation thresholds
-MIN_SCORE=5
+MIN_SCORE=6
 SEARCH_CRON="0 * * * *" # Every hour
-REQUEST_DELAY_MS=2000
+REQUEST_DELAY_MS=15000
 
 # Browser and scraping configuration
 BROWSER_USER_AGENT="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36"
-MAX_SEARCH_PAGES=3
-JOB_SITES="work.ua,robota.ua,dou.ua,djinni.co"
+MAX_SEARCH_PAGES=999
+JOB_SITES="robota.ua,dou.ua,djinni.co"
 
 # Content extraction limits
 MAX_PARSER_LENGTH=5000
 
 # AI/LLM Connection parameters
-OLLAMA_HOST="http://localhost:11434"
-AI_MODEL_NAME=llama3
+AI_MODEL_NAME=compound-beta
