--- a/ai-job-searcher-backend/.env.example
+++ b/ai-job-searcher-backend/.env.example
@@ -35,6 +35,17 @@ DB_PASSWORD=
 # If it doesn't exist yet, MongoDB will create it automatically on first write.
 DB_NAME=
 
+
+
+# ==============================================================================
+# GROQ API
+# ==============================================================================
+
+#API key generated in https://console.groq.com/keys
+GROQ_API_KEY=
+
+
+
 # ==============================================================================
 # INSTRUCTIONS:
 # 1. Copy this file and rename it to '.env'
