--- a/ai-job-searcher-backend/package.json
+++ b/ai-job-searcher-backend/package.json
@@ -27,9 +27,9 @@
     "@nestjs/schedule": "^6.1.0",
     "axios": "^1.13.4",
     "cheerio": "^1.2.0",
+    "groq-sdk": "^0.37.0",
     "mongodb": "^7.0.0",
     "nodemailer": "^7.0.13",
-    "ollama": "^0.6.3",
     "playwright": "^1.58.1",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
