--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ coverage/
 .env.test.local
 .env.production.local
 .env.local
+# added to not update example of .env.jobsearch 
+.env.jobsearch 
 
 # temp directory
 .temp/
